# ComfyUI-LaVIT

./: README.md  nodes.py  pyproject.toml  requirements.txt  wf_i2v.json  wf_t2v.json  wf_t2v_long.json  wf_videoreconstruction.json
VideoLaVIT/models/: __init__.py  modeling_motion_tokenizer.py  modeling_video_lavit_hf.py  transform.py  video_detokenizer.py  video_lavit_for_generation.py  video_lavit_for_understanding.py
